/**
 * Standalone signaling server for the Nextcloud Spreed app.
 * Copyright (C) 2022 struktur AG
 *
 * @author Joachim Bauch <bauch@struktur.de>
 *
 * @license GNU AGPL version 3 or any later version
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

option go_package = "github.com/strukturag/nextcloud-spreed-signaling;signaling";

package signaling;

service RpcMcu {
  rpc GetPublisherId(GetPublisherIdRequest) returns (GetPublisherIdReply) {}
}

message GetPublisherIdRequest {
  string sessionId = 1;
  string streamType = 2;
}

message GetPublisherIdReply {
  string publisherId = 1;
  string proxyUrl = 2;
  string ip = 3;
  string connectToken = 4;
  string publisherToken = 5;
}
